# full-stack-kubernetes-app

./: .env  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: pyproject.toml  requirements.txt
backend/src/: config.py  database.py  main.py  models.py  routes.py  schemas.py  security.py
docker/: Dockerfile.backend  Dockerfile.frontend  pg_hba.conf  postgres-custom.conf  postgres-init.sh
frontend/: .env  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/theme/: GlobalStyle.ts
frontend/src/types/: MetaInterfaces.ts
frontend/ssl/: nginx.crt  nginx.key
kubernetes/: backend.yaml  frontend.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  postgres.yaml
